--- a/index.html
+++ b/index.html
@@ -1,153 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <script src="./jquery-3.6.1.min.js"></script> -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="style.css">
-    <title>Management System</title>
-</head>
-
+	<head>
+		<meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1"/>
+		<link rel="stylesheet" type="text/css" href="css/bootstrap.css"/>
+	</head>
 <body>
-    <!-- <header>
-        <h3>School Management System</h3>
-    </header> -->
-    <section class="main">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-lg-2 Main-Menu overflow-auto" id="main-nav">
-                        <!-- <i class="bi bi-list"></i> -->
-                        <div>
-                            <h6 class="text-center mb-4"><a href="./index.html"> School Management System</a></h6>
-                            <!-- navbar -->
-                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                                aria-expanded="false" aria-label="Toggle navigation">
-                                <span class="navbar-toggler-icon"></span>
-                            </button>
-                            <ul>
-                                <li id="hamburgar" class="px-1 py-2 fw-semibold">
-                                    <i class="bi bi-list px-4"></i>
-                                </li>
-                                <li id="reg" class="px-1 py-2 fw-semibold"> <i class="bi bi-plus-circle px-4"></i>
-                                    Registration
-                                    <ul id="reg_operations">
-                                        <li class="py-1"><a href="./admission.html"><i
-                                                    class="bi bi-person-fill-add px-4"></i> Add Student </a></li>
-                                        <li class="py-1"><a href="./employee.html"><i
-                                                    class="bi bi-person-fill-check px-4"></i></i> Add Faculty</a></li>
-                                        <li class="py-1"><a href="./staff.html"><i
-                                                    class="bi bi-person-fill-gear px-4"></i></i> Add staff</a></li>
-                                    </ul>
-                                </li>
-                                <li id="mng" class="px-1 py-2 fw-semibold"><i class="bi bi-kanban-fill px-4"></i>
-                                    Management
-                                    <ul id="mng_operations">
-                                        <li class="py-1"><i class="bi bi-bank2 px-4"></i> Class</li>
-                                        <li class="py-1"><a href="./time_table.html"><i
-                                                    class="bi bi-calendar2-week-fill px-4"></i> Timetable</a></li>
-                                        <li class="py-1"><a href="./attendence.html"><i
-                                                    class="bi bi-check-square-fill px-4"></i> Attendance</a></li>
-                                    </ul>
-                                </li>
-                                <li id="fee" class="px-1 py-2 fw-semibold"><i class="bi bi-cash-coin px-4"></i> Fee
-                                    <ul id="fee_operations">
-                                        <li class="py-1"><a href="./fee_status.html"><i
-                                                    class="bi bi-box-arrow-in-up-right px-4"></i> Update Status</a></li>
-                                        <li class="py-1"><a href="./check_fee.html"><i
-                                                    class="bi bi-clipboard-check-fill px-4"></i> Check Fee</a></li>
-                                    </ul>
-                                </li>
-                                <li id="std" class="px-1 py-2 fw-semibold"><i class="bi bi-person-fill px-4"></i>
-                                    Students
-                                    <ul id="std_operations">
-                                        <li class="py-1"><i class="bi bi-file-text px-4"></i> Details</li>
-                                        <li class="py-1"><i class="bi bi-file-text px-4"></i> Admissions</li>
-                                        <li class="py-1"><i class="bi bi-person-fill-up px-4"></i> Promote</li>
-                                    </ul>
-                                </li>
-                                <li id="teh" class="px-1 py-2 fw-semibold"><i class="bi bi-person-circle px-4"></i>
-                                    Teachers
-                                    <ul id="teh_operations">
-                                        <li class="py-1"><i class="bi bi-file-text px-4"></i> Details</li>
-                                        <li class="py-1"><i class="bi bi-person-check-fill px-4"></i> Appoint</li>
-                                    </ul>
-                                </li>
-                                <li id="exm" class="px-1 py-2 fw-semibold"><i
-                                        class="bi bi-file-earmark-text-fill px-4"></i> Examination
-                                    <ul id="exm_operations">
-                                        <li class="py-1"><i class="bi bi-graph-up px-4"></i> Results</li>
-                                        <li class="py-1"><i class="bi bi-calendar2-week-fill px-4"></i> Timetable</li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-lg-10 px-3 Main-Content overflow-auto">
-                        <div class="row">
-                            <!-- <li id="hamburgar" class="px-1 py-2 fw-semibold"> -->
-                                <i id="hamburgar-main" class="bi bi-list px-4"></i>
-                            <!-- </li> -->
-                        </div>
-                        <div class="row">
-                            <div class="col-sm-3">
-                                <!-- total students -->
-                                <div class="content">
-                                    <h6>total students</h6>
-                                    <h2>520</h2>
-                                    <h6>500-20</h6>
-                                </div>
-                            </div>
-                            <div class="col-sm-3">
-                                <!-- total teachers -->
-                                <div class="content">
-                                    <h6>total teachers</h6>
-                                    <h2>520</h2>
-                                    <h6>500-20</h6>
-                                </div>
-                            </div>
-                            <div class="col-sm-3">
-                                <!-- total staff -->
-                                <div class="content">
-                                    <h6>total staff</h6>
-                                    <h2>520</h2>
-                                    <h6>500-20</h6>
-                                </div>
-                            </div>
-                            <div class="col-sm-3">
-                                <!-- total staff -->
-                                <div class="content">
-                                    <h6>total staff</h6>
-                                    <h2>520</h2>
-                                    <h6>500-20</h6>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <!-- main content -->
-                            <div class="col-md-12">
-
-                                welcom to school Management System
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-    </section>
-
-    <footer></footer>
-
+	<nav class="navbar navbar-default">
+		
+	</nav>
+	<div class="col-md-3"></div>
+	<div class="col-md-6 well">
+		<h3 class="text-primary">Student Data</h3>
+		<hr style="border-top:1px dotted #ccc;"/>
+		<div class="col-md-8">
+			<table class="table table-bordered">
+				<thead class="alert-info">	
+					<tr>
+						<th>Name</th>
+						<th>Action</th>
+					</tr>
+				</thead>
+				<tbody id="result"></tbody>
+			</table>
+		</div>
+	
+		<div class="col-md-4">
+			<div id="create">
+				<form action="javascript:void(0);" method="POST" class="form-group" onsubmit="Create()">
+					<label>Enter Your Name:</label>
+					<input type="text" id="name" class="form-control"/>
+					<br />
+					<center><button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-plus"></span> Create</button></center>
+				</form>
+			</div>
+			<div id="edit">	
+				<form action="javascript:void(0);" method="POST" class="form-group" id="update">
+					<label>Enter Your Name:</label>
+					<input type="text" id="update_name" class="form-control"/>
+					<br />
+					<center><button type="submit" class="btn btn-warning"><span class="glyphicon glyphicon-edit"></span> Update</button> <button class="btn btn-danger" onclick="editHider()">&#10006; Close</button></center>
+				</form>
+			</div>
+		</div>
+	</div>
 </body>
-<script src="./jquery-3.6.1.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-    crossorigin="anonymous"></script>
-<script src="./app.js"></script>
-
+<script src="js/script.js"></script>
 </html>
